src/test/deca/syntax/invalid/sansobjet/AddInt.deca
// 
// Description: teste addition sans second membre
// Resultat: mismatchinput ligne 5 
{
    int a = 1 +; 
}
